testsuite/tests/parser/unicode/T18158b.stderr

T18158b.hs:1:14: error: lexical error at character '\8559'
